--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,31 @@
 #foot {
-    display: flex;
-    background: #000000
+  justify-content: space-between;
+  display: flex;
+  background: #474646;
+  color: white;
+  width: 70%;
+  margin: auto;
+  font-size: .75rem
+}
+
+#foot h3 {
+ color: rgba(250, 132, 15, 0.945);   
+} 
+
+#footer {
+  width: 100%;
+  background: #474646
+}
+
+#pic img {
+  height: 1.5rem;
+  width: 3rem;
+  margin: .5rem
+}
+
+#pic {
+  width: 23rem;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -1rem
 }
