--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -44,15 +44,28 @@
 
 #bheader {
   display: flex;
-  background:  #E0E0E0;
+  height:90%;
+
   margin: auto;
-  width: 70%;
-  justify-content: flex-start;
+  width: 30%;
+  justify-content: space-around;
   align-items: center
 }
+#mother{
+  height:90%;
+  width:90%;
+  margin-top:5%;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-around;
 
+}
 #bhead {
-  display: flex
+  display: flex;
+  width:70%;
+  justify-content: space-between;
+  
+ 
 }
 
 #cart {
@@ -72,14 +85,111 @@
 }
 
 #free {
-  background: white;
+  background-color: white;
+  width:70%;
+  height:17px;
+  font-weight: 600;
+  font-size: 11px;
+  color:#404040;
+  display:flex;
+  justify-content: space-between;
 }
 
 #bhed {
-  background:  #E0E0E0;
+  display: flex;
+background-color: #e6e6e6;
+  justify-content: space-around;
   width: 100%
 }
 
 #apple {
-  margin-left: 6rem
+  display: flex;
+  justify-content: space-between;
+  width:15%;
+ 
+}
+#firstText{
+  font-size: 12px;
+  color:#404040;
+}
+#firstTextParent{
+  width:90%;
+  margin-bottom: 0px;
+
+}
+#secondPart{
+  width:80%;
+
+}
+#curvedEdge{
+  width:14px;
+  height:16px;
+  border: 1px solid transparent;
+
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;;
+}
+#FreeDownload{
+  margin-top:0px;
+  width:100%;
+  height:16px;
+
+}
+#rightSide{
+width:40%;
+height:70px;
+
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+#rowone{
+height:33%;
+ width:100%;
+/* background-color: blue;  */
+}
+#rowtwo{
+  height:30%;
+  width:100%;
+  /* background-color: rgb(116, 90, 66); */
+}
+#rowthree{
+  height:35%;
+  width:100%;
+ 
+}
+
+#one{
+font-size: 16px;
+color:#737373;
+font-weight:600;
+
+}
+#two{
+  font-size: 12px;
+  color:#737373;
+}
+#rowthree{
+width:70%;
+display :flex;
+justify-content: space-around;
+margin-left:0px;
+}
+#input{
+  width:50%;
+  height:100%;
+  border:1px solid transparent;
+
+}
+#button1{
+  width:20%;
+  height:100%;
+  border:1px solid transparent;
+  color:white;
+  background-color: #e68a00;
+}
+#button2{
+  width:25%;
+  height:100%;
+  border:1px solid transparent;
+  color:white;
+  background-color: #e68a00;
 }
