--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -21,15 +21,16 @@
 
 #pic img {
   height: 1.5rem;
-  width: 3rem;
+  width: 2rem;
   margin: .5rem
 }
 
 #pic {
-  width: 23rem;
+  width: 18rem;
   display: flex;
   flex-wrap: wrap;
-  margin-left: -1rem
+  margin-left: -1rem;
+  justify-content: space-evenly
 }
 
 #pic1 {
@@ -38,7 +39,7 @@
 
 #media img {
   height: 2rem;
-  width: 3rem;
+  width: 2.5rem;
   margin-right: -.5rem
 }
 
@@ -97,9 +98,11 @@
 
 #bhed {
   display: flex;
-background-color: #e6e6e6;
+  background-color: #e6e6e6;
   justify-content: space-around;
-  width: 100%
+  width: 100%;
+  margin-top: 1.5rem;  
+  padding: .5rem
 }
 
 #apple {
@@ -193,3 +196,20 @@ margin-left:0px;
   color:white;
   background-color: #e68a00;
 }
+
+
+#footer-header1 {
+  width: 100%;
+  /* margin: auto; */
+  font-size: 0.7rem;
+  display: flex;
+  align-items: center;
+  color:  rgb(163, 157, 157);
+  margin-top: 2rem;
+  justify-content: end;
+  margin-left: 4rem
+ }
+ 
+ #footer-header1 img {
+  padding: .4rem
+ }
