--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,7 +13,7 @@ box-sizing: border-box
  color:  rgb(163, 157, 157)
 }
 
-#header img {
+#header1 img {
  padding: .4rem
 }
 
@@ -28,7 +28,6 @@ box-sizing: border-box
 #header2 #header2i {
  display: flex;
  width: 80%;
- height: 80%;
  margin: auto;
  justify-content: space-evenly;
  align-items: center;
@@ -55,7 +54,12 @@ box-sizing: border-box
  width: 11rem
 }
 
-#header2 #input input {
+#header2 #header-input {
+ display: flex;
+ align-items: center
+}
+
+#header-input input {
  width: 35rem;
  height: 2.5rem;
  background: #F5F5F5;
@@ -63,7 +67,7 @@ box-sizing: border-box
  padding-left: 1rem
 }
 
-#header2 #input button {
+#header2 #header-input button {
  width: 6rem;
  height: 2.5rem;
  background: rgba(250, 132, 15, 0.945);
@@ -76,13 +80,14 @@ box-sizing: border-box
  display: flex;
  margin: auto ;
  font-size: .75rem;
- height: 23rem
+ height: 23rem;
+ justify-content: unset
 }
 
 #delivery {
  width: 70%;
  margin-top: -.5rem;
- margin-left: -.5rem
+ /* margin-left: -.5rem */
 }
 
 #delivery img {
@@ -95,6 +100,10 @@ width: 15%
 }
 
 #header3 #one {
+ font-size: .75rem
+}
+
+#header3 #one {
  background: white;
  padding: -2rem;
  padding-left: 1rem
@@ -102,6 +111,27 @@ width: 15%
 
 #header3 #one p {
  padding: .15rem;
+}
+
+#header3 #one1 {
+height: 23rem;
+}
+
+#header3 #one1 #modal {
+ margin-top: -1.2rem;
+ height: 50%
+}
+
+#header3 #one1 #modal img {
+ width: 100%
+}
+ 
+#header3 #one1 #sell {
+ background: white;
+ width: 100%;
+ margin-left: .5rem;
+ height: 49%;
+ padding-top: 1rem
 }
 
 #sell img {
@@ -121,4 +151,61 @@ font-size: .73rem
 
 #header3 #buy1, #header3 #buy1 span {
  color:  rgba(250, 132, 15, 0.945);
+}
+
+@media only screen and (max-width: 480px){
+ body {
+  width: 100%;
+  /* overflow-x: hidden */
+  padding: 0;
+  margin: 0
+ }
+
+ #header1 {
+  display: none
+ }
+
+#header2 {
+ height: 10rem;
+ width: 100%;
+ background: #F5F5F5
+}
+
+#header-input {
+ display: flex;
+ flex-direction: column
+}
+
+#header-input input {
+ width: 23rem;
+ font-size: .75rem;
+ /* padding-right: .5rem; */
+ margin: auto;
+ padding-left: 1rem;
+ margin-bottom: .5rem;
+ background: white;
+}
+
+#header-input button {
+ /* display: inline-block; */
+}
+
+#header2 #header2i {
+ display: flex;
+ flex-direction: column;
+ height: 10rem;
+ flex-wrap: wrap;
+ width: 100%
+}
+
+#header2 img {
+width: 7rem
+}
+
+#header2 #need {
+ display: none
+}
+
+#header3 {
+}
 }
