--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,3 +1,75 @@
+#hlogin-eader1 {
+ width: 70%;
+ margin: auto;
+ font-size: 0.7rem;
+ display: flex;
+ align-items: center;
+ color:  rgb(163, 157, 157)
+}
+
+#login-header img {
+ padding: .4rem
+}
+
+.login-header2 {
+ background: white;
+ height: 4.5rem;
+ display: flex;
+ align-items: center;
+ border-bottom: 1px solid #F5F5F5
+}
+
+#login-header2 #login-header2i {
+ display: flex;
+ width: 80%;
+ height: 80%;
+ margin: auto;
+ justify-content: space-evenly;
+ align-items: center;
+ height: 4rem;
+}
+
+#login-header2 #login-need {
+ display: flex;
+ height: 1rem;
+ justify-content: space-between;
+ width: 7rem;
+ align-items: center;
+ font-size: .9rem;
+ color: rgb(121, 112, 112)
+}
+
+#login-header2 #login-need span {
+ font-weight: bold;
+ color: black
+}
+
+#login-header2 img {
+ height: 3rem;
+ width: 11rem
+}
+
+#login-header2 #login-input {
+ display: flex;
+ align-items: center
+}
+
+#login-header2 #login-input input {
+ width: 35rem;
+ height: 2.5rem;
+ background: white;
+ border: none;
+ padding-left: 1rem
+}
+
+#login-header2 #login-input button {
+ width: 6rem;
+ height: 2.5rem;
+ background: rgba(250, 132, 15, 0.945);
+ border: none;
+ color: white
+}
+
 #loginParent {
  background: white
 }
@@ -48,4 +120,8 @@
 
 #down {
  margin-top: 14.8rem
+}
+
+#loginUp {
+
 }
