--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -1,3 +1,75 @@
+#signup-header1 {
+ width: 70%;
+ margin: auto;
+ font-size: 0.7rem;
+ display: flex;
+ align-items: center;
+ color:  rgb(163, 157, 157)
+}
+
+#signup-header img {
+ padding: .4rem
+}
+
+.header2 {
+ background: white;
+ height: 4.5rem;
+ display: flex;
+ align-items: center;
+ border-bottom: 1px solid #F5F5F5
+}
+
+#signup-header2 #signup-header2i {
+ display: flex;
+ width: 80%;
+ height: 80%;
+ margin: auto;
+ justify-content: space-evenly;
+ align-items: center;
+ height: 4rem;
+}
+
+#signup-header2 #signup-need {
+ display: flex;
+ height: 1rem;
+ justify-content: space-between;
+ width: 7rem;
+ align-items: center;
+ font-size: .9rem;
+ color: rgb(121, 112, 112)
+}
+
+#signup-header2 #signup-need span {
+ font-weight: bold;
+ color: black
+}
+
+#signup-header2 img {
+ height: 3rem;
+ width: 11rem
+}
+
+#signup-header2 #signup-input {
+ display: flex;
+ align-items: center
+}
+
+#signup-header2 #signup-input input {
+ width: 35rem;
+ height: 2.5rem;
+ background: white;
+ border: none;
+ padding-left: 1rem
+}
+
+#signup-header2 #signup-input button {
+ width: 6rem;
+ height: 2.5rem;
+ background: rgba(250, 132, 15, 0.945);
+ border: none;
+ color: white
+}
+
 #up {
  width: 70%;
  margin: auto;
@@ -8,37 +80,20 @@
  align-items: center
 }
 
-/* #header2 {
+#sign-header2 {
  background: white;
  height: 4.5rem;
  display: flex;
  align-items: center;
  border-bottom: 1px solid #F5F5F5
-} */
-
-@media only screen and (max-width: 480px){
- /* #up {
-  width: 100%;
-  display: block
- } */
-
- #resp {
-  display: block;
-  /* max-width: 50%; */
- }
-
- /* #header2 {
- display: block;
- width:20%
- } */
-
- body,html {
-  /* overflow-x:  hidden */
-  padding: 0;
-  margin: 0
- }
- 
 }
+
+/* @media only screen and (max-width: 480px){
+#resp {
+ display: block
+} */
+ 
+ 
 
 #create {
  background: white;
@@ -48,7 +103,7 @@
  /* width: 50%; */
 }
 
-#input2 input{
+#signup-input2 input{
  width: 34rem;
  height: 2.18rem;
  background: white;
@@ -65,7 +120,7 @@
  margin-left: .5rem
 }
 
-#input1 {
+#signup-input1 {
  width: 50%;
  display: flex;
  flex-wrap: wrap;
@@ -73,7 +128,7 @@
  justify-content: space-between;
 }
 
-#input1 input {
+#signup-input1 input {
  border: none;
  border-bottom: 1px solid black;
  width: 40%;
@@ -123,4 +178,9 @@ font-size: .87rem;
  background: #344F88;
  color: white;
  margin-top: 1rem
+}
+
+#signup-nav {
+ text-decoration: none;
+ color: rgb(97, 93, 93)
 }
