--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -1,25 +1,4 @@
-#signup-header1 {
- width: 70%;
- margin: auto;
- font-size: 0.7rem;
- display: flex;
- align-items: center;
- color:  rgb(163, 157, 157)
-}
-
-#signup-header img {
- padding: .4rem
-}
-
-.header2 {
- background: white;
- height: 4.5rem;
- display: flex;
- align-items: center;
- border-bottom: 1px solid #F5F5F5
-}
-
-#signup-header2 #signup-header2i {
+#signup-header2i {
  display: flex;
  width: 80%;
  height: 80%;
@@ -29,7 +8,7 @@
  height: 4rem;
 }
 
-#signup-header2 #signup-need {
+#signup-need {
  display: flex;
  height: 1rem;
  justify-content: space-between;
@@ -39,9 +18,14 @@
  color: rgb(121, 112, 112)
 }
 
-#signup-header2 #signup-need span {
+#signup-need span {
  font-weight: bold;
  color: black
+}
+
+#signup-nav {
+ text-decoration: none;
+ color: rgb(97, 93, 93)
 }
 
 #signup-header2 img {
@@ -49,12 +33,12 @@
  width: 11rem
 }
 
-#signup-header2 #signup-input {
+#signup-input {
  display: flex;
  align-items: center
 }
 
-#signup-header2 #signup-input input {
+#signup-input input {
  width: 35rem;
  height: 2.5rem;
  background: white;
@@ -62,7 +46,7 @@
  padding-left: 1rem
 }
 
-#signup-header2 #signup-input button {
+#signup-input button {
  width: 6rem;
  height: 2.5rem;
  background: rgba(250, 132, 15, 0.945);
@@ -80,36 +64,11 @@
  align-items: center
 }
 
-#sign-header2 {
- background: white;
- height: 4.5rem;
- display: flex;
- align-items: center;
- border-bottom: 1px solid #F5F5F5
-}
-
-/* @media only screen and (max-width: 480px){
-#resp {
- display: block
-} */
- 
- 
-
 #create {
  background: white;
  margin: auto;
  margin-top: -1rem;
  padding-bottom: 5rem
- /* width: 50%; */
-}
-
-#signup-input2 input{
- width: 34rem;
- height: 2.18rem;
- background: white;
- border: 1px solid rgb(211, 203, 203);
- border-radius: .25rem;
- padding-left: 1rem
 }
 
 #search {
@@ -180,7 +139,17 @@ font-size: .87rem;
  margin-top: 1rem
 }
 
-#signup-nav {
- text-decoration: none;
- color: rgb(97, 93, 93)
+@media only screen and (max-width: 480px){
+#up {
+ display: none
 }
+
+#signup-header2i {
+display: block;
+height: 15%
+}
+
+}
+
+ 
+ 
