--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -14,3 +14,17 @@
  height: 20rem;
  border-radius: .2rem
 }
+
+@media only screen and (max-width: 480px){
+ #b1-div {
+  display: block;
+  width: 100%;
+  margin: auto;
+  margin-top: 1.5rem;
+  background: white;
+}
+
+#b1-div img {
+ width: 100%
+}
+}
