--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -125,3 +125,13 @@
 #loginUp {
 
 }
+
+#login-up {
+ width: 70%;
+ margin: auto;
+ font-size: .8rem;
+ height: 1.5rem;
+ color: rgba(250, 132, 15, 0.945);
+ display: flex;
+ align-items: center
+}
