--- a/src/components/Stock.css
+++ b/src/components/Stock.css
@@ -72,7 +72,7 @@
 
 @media only screen and (max-width: 480px){
  #banMain {
-  width:80%
+  width:100%
  }
 
  #card {
@@ -91,7 +91,7 @@
  }
 
  #stockHolder {
-  width: 80%
+  width: 100%
  }
 
  #stock {
@@ -116,4 +116,13 @@
  #stockHeader {
   width: 80%
  }
+
+ #stockDiscount {
+  position: relative;
+  top: 17px;
+  left: 0px;
+  background: rgb(248, 226, 200);
+  z-index: 2;
+  width: 1.5rem;
+}
 }
