--- a/src/components/FooterTwo.css
+++ b/src/components/FooterTwo.css
@@ -31,7 +31,7 @@ a:visited{
   text-decoration: none;
   
 }
-#topinside{
+.footer2Row{
   width: 100%;
   height: 60%;
   /* margin-left: auto;
@@ -187,3 +187,23 @@ color: white;
 height:100%;
 }
 
+@media only screen and (max-width: 480px){
+  #rowA, #rowC, #end, #best, #bottom {
+    display: none
+  }
+
+  .footer2Row {
+    display: flex;
+    justify-content: center
+  }
+
+  #rowB {
+    display: block;
+    /* margin: -20px */
+  }
+
+  .Two {
+    line-height: normal;
+    font-size: 9px
+  }
+}
