--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -28,3 +28,18 @@
  width: 100%
 }
 }
+
+@media only screen and (min-width: 481px) and (max-width: 768px){
+  #b1-div {
+   display: flex;
+   justify-content: space-between;
+   width: 90%;
+   margin: auto;
+   margin-top: 1.5rem;
+   background: white;
+ }
+ 
+ #b1-div img {
+  width: 50%
+ }
+ }
