--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -234,7 +234,8 @@ width: 7rem
  width: 26%;
  font-size: 80%;
  display: flex;
- padding: 3.3%
+ align-items: center;
+ justify-content: center;
 }
 
 #header2i {
