--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,3 +3,9 @@
   width: 100%
  }
 }
+
+@media only screen and (min-width: 481px) and (max-width: 768px){
+ #homeProps {
+  overflow-x: hidden
+ }
+}
