--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -216,8 +216,11 @@
  
  #login-header2i {
   display: flex;
-  height: 2%;
   width: 90%
+ }
+
+ #login-up {
+  /* height: .003% */
  }
  
  #login-header2 img {
