--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,7 +22,10 @@ box-sizing: border-box
  height: 4.5rem;
  display: flex;
  align-items: center;
- border-bottom: 1px solid #F5F5F5
+ border-bottom: 1px solid #F5F5F5;
+ position: -webkit-sticky;
+ position: sticky;
+ top: 0px
 }
 
 #header2i {
@@ -158,7 +161,7 @@ font-size: .73rem
 #header2 {
  height: 3%;
  width: 100%;
- background: #F5F5F5
+ background: #F5F5F5;
 }
 
 #header-input {
