--- a/src/components/ProfilePage.css
+++ b/src/components/ProfilePage.css
@@ -2,15 +2,85 @@
  display: flex;
  justify-content: space-between;
  width: 70%;
- /* background: green */
+ margin: auto;
 }
 
 #profile-first {
- width: 27%;
- /* background: blue */
+ width: 22.2%;
+ background-color: white;
+ line-height: 2.5;
+}
+
+#profile-first1 {
+ border-bottom: 1px solid rgb(163, 155, 155);
+ background: #E0E0E0;
+ margin-top: -6%
+}
+
+#profile-first2 {
+ border-top: 1px solid rgb(163, 155, 155);
+}
+
+#profile-log {
+ border-top: 1px solid rgb(163, 155, 155);
+ padding-top: -5%;
+ text-align: center
 }
 
 #profile-second {
- width: 67%;
- /* background: black */
+ width: 76.5%;
+ background: white
+}
+
+#profile-wrap {
+ margin-left: 2.3%;
+ margin-bottom: 2%;
+ display: flex;
+ flex-wrap: wrap;
+ width: 100%;
+ justify-content: flex-start;
+}
+
+.profile-pWrap {
+ width: 43%;
+ border: 1px solid rgb(219, 214, 214);
+ margin: 2%;
+}
+
+.profile-wrap1 {
+ border-bottom: 1px solid rgb(219, 214, 214);
+ padding-left: 4%;
+ max-width: 100%;
+}
+
+.profile-wrap2 {
+ padding-left: 4%;
+ max-width: 100%;
+}
+
+#profile-pass {
+ padding-top: 3%;
+}
+
+#profile-acct {
+ padding-left: 4%
+}
+
+#profile-sell {
+ width: 70%;
+ margin: auto;
+ background: white
+}
+
+#profile-map {
+ display: flex
+}
+
+#profile-map img {
+ height: 70%;
+ width: 70%
+}
+
+#profile-name {
+ font-size: 90%
 }
