--- a/src/components/FooterTwo.css
+++ b/src/components/FooterTwo.css
@@ -1,53 +1,188 @@
 #house {
   width: 100%;
   height: 70vh;
-  background-color: #4d4d4d;
-  margin-top: 30vh;
+  background-color: #353333;
+  margin-top: 1vh;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #top {
-  width: 80%;
+  width: 84%;
   height: 85%;
   margin-left: auto;
   margin-right: auto;
-  background-color: aquamarine;
-  border-bottom: 1px solid grey;
+  /* background-color: aquamarine; */
+  border-bottom: 1px solid rgb(121, 120, 120);
+  
+}
+a:hover{
+  color:white;
+  text-decoration:underline;
+  border-bottom:1px solid rgb(121, 120, 120);
+
+
+}
+a:link{
+  color:white;
+  text-decoration: none;
+  
+}
+a:visited{
+  color:white;
+  text-decoration: none;
+  
+}
+#topinside{
+  width: 100%;
+  height: 60%;
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* background-color: gold; */
+  /* border-bottom: 1px solid rgb(121, 120, 120); */
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 #bottom {
   width: 80%;
   height: 15%;
   margin-left: auto;
   margin-right: auto;
-  background-color: aquamarine;
+  /* background-color: green; */
 }
 #rowA {
   width: 20%;
-  background-color: red;
+  height:50%;
+  /* background-color: red; */
 }
 #rowB {
   width: 20%;
-  background-color: red;
+  height:50%;
+  /* background-color: red; */
 }
-#rowC {
-  width: 40%;
-  background-color: red;
-}
+
 .One {
   color: white;
   font-size: 14px;
   font-weight:600;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
 }
 .Two {
-  font-size: 12px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 13px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
-  line-height: 5px;
-  font-weight:500;
+  line-height: 3px;
+  font-weight: 100;
 }
 .Three {
 
 }
 .Four {
+}
+
+#rowC {
+  width: 50%;
+  /* background-color: rgb(0, 238, 255); */
+  display: flex;
+  height:50%;
+  justify-content: space-around;
+
+}
+#beginning{
+width:60%;
+/* height: */
+font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  line-height: 3px;
+  font-weight: 100;
+  margin-top: 10px;
+
+}
+
+#end{
+width:35%;
+margin-right: 10%;
+/* background-color: rgb(200, 255, 0); */
+}
+#endbox{
+  display:flex;
+  width:85%;
+  justify-content: space-between;
+}
+#endbox1{
+  width:45%;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  line-height: 3px;
+  font-weight: 100;
+
+}
+#endbox2{
+  width:45%;
+  font-size: 14px;
+  /* background-color: aquamarine; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  line-height: 3px;
+  font-weight: 100;
+}
+#best{
+  width:100%;
+  height:20vh;
+/* background-color: blue; */
+
+}
+#best1{
+  width:100%;
+  height:35%;
+/* background-color: red; */
+display: flex;
+justify-content: space-between;
+}
+#best11{
+width:20%;
+height:100%;
+color:white;
+}
+#best12{
+  width:20%;
+  display: flex;
+  align-items: center;
+  /* background-color: aquamarine; */
+height:80%;
+margin-top:1%;
+font-size: 20px;
+color:white;
+}
+#best13{
+  width:50%;
+height:100%;
+color:white;
+}
+
+#best2{
+  width:100%;
+  margin-top:1%;
+  height:50%;
+/* background-color: red; */
+display: flex;
+justify-content: space-between;
+}
+#best14{
+width:20%;
+height:100%;
+}
+#best15{
+  width:20%;
+height:40%;
+margin-bottom:65%;
+display: flex;
+align-items: center;
+color: white;
+
+/* background-color: blue; */
+}
+#best16{
+  width:50%;
+height:100%;
 }
