--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,9 +1,77 @@
 #loginParent {
- background: white
+ background: white;
+height:10vh;
+width:100%;
 }
+#up{
+    display: flex;
+    justify-content: space-around;
+    /* background-color: #cccccc; */
+    
+}
+#jumi{
+    display:flex;
+    justify-content: space-between;
+    width:20%;
+    /* background-color: aqua; */
 
+}
+.nan{
+    margin-top:20%;
+}
+.by{
+    padding-top:20%;
+    
+}
+#logoSection{
+
+    width:70%;
+    height:6vh;
+    /* background-color: #0059b3; */
+    font-weight: 600;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+li{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height:4vh;
+    margin-bottom: 2vh;
+
+}
+#logoSection li a:link{
+color:#cccccc;
+}
+#logoSection li a:hover{
+    color:#0059b3;
+    }
+#header2i{
+width:10%;
+height:60%;
+
+}
+#span{
+    width:34px;
+    height:50%;
+    /* background-color: #0059b3; */
+    margin-top:5%;
+    margin-left:5%;
+    
+   
+
+
+}
+#span1{
+    width:100%;
+    height: 4px;
+    background-color: black;
+    margin-top: 2px;
+    border-radius:20px;
+    
+}
 #Plog {
- background: white
+ background: white;
+ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 #log {
@@ -12,17 +80,50 @@
  margin: auto;
  padding: 3rem
 }
-
+#lost{
+    height:15%;
+    width:90%;
+    /* background-color: aquamarine; */
+    display:flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+}
+#check{
+    width:2%;
+}
+#checkbox{
+    font-size: 15px;
+    color:rgb(170, 169, 169);
+    font-family: 'Times New Roman', Times, serif;
+    display: flex;
+    /* background-color: rgb(140, 127, 255); */
+    justify-content: space-around;
+    width:50%;
+    
+}
+#para{
+    width:100%;
+    height:50%;
+    margin-top:15%;
+    /* background-color: red; */
+    color:rgb(10, 10, 10);
+}
 #log button {
  width: 80%;
  margin: 1rem;
  height: 3rem;
+ border:1px solid transparent;
  border-radius: .4rem
 }
 
 .log1 {
  width: 50%;
- text-align: center
+ text-align: center;
+
+}
+#one{
+    border-right: 1px solid rgb(228, 226, 226);
 }
 
 .log1 input{
@@ -48,4 +149,42 @@
 
 #down {
  margin-top: 14.8rem
+}
+
+ul{
+    display:flex;
+    width:100%;
+    height:100%;
+    list-style-type: none;
+    justify-content: space-around;
+    /* background-color: green; */
+    margin-top:0px;
+}
+img #img{
+    width:100%;
+    /* background-color: aquamarine; */
+    margin:5px;
+}
+#list{
+    /* background-color:red; */
+    width:10%;
+    margin-top:5px;
+}
+#need{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* display:flex; */
+    justify-content: space-between;
+    margin-left:0px;
+    height:100%;
+    font-size: 20px;
+    color:black;
+    /* background-color: #0059b3; */
+    width:30%;
+}
+#p1{
+    color:black;
+    font-size: 20px;
+    margin-right:12px;
+    display: flex;
+    justify-content: space-around
 }
