--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -51,7 +51,7 @@
  text-align: center;
 
 }
-#one{
+#login-one{
     border-right: 1px solid rgb(228, 226, 226);
 }
 
@@ -77,7 +77,7 @@
 }
 
 #down {
- margin-top: 14.8rem
+ margin-top: 54%
 }
 
 #login-up {
