--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -7,7 +7,7 @@
 
 
 #signup-input1 {
- width: 50%;
+ width: 70%;
  display: flex;
  flex-wrap: wrap;
  margin: auto;
@@ -18,16 +18,21 @@
  border: none;
  border-bottom: 1px solid black;
  width: 40%;
- margin: 2rem;
- padding: .5rem
+ margin: 2%;
+ padding: 3%
 }
 
 #label {
- margin-left: 1.5rem
+ display: flex;
+ align-items: center;
+ margin: 2%;
+ margin-left: -1.5%;
+ padding: 3%;
+ width: 50%
 }
 
 #label input {
- width: 17rem
+ width: 75%
 }
 
 #create h3 {
