--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -11,11 +11,11 @@
 }
 #lost{
     height:15%;
-    width:90%;
+    width:80%;
     /* background-color: aquamarine; */
     display:flex;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 2%;
+    /* margin-right: auto; */
     justify-content: space-between;
 }
 #check{
