--- a/src/components/ProfilePage.css
+++ b/src/components/ProfilePage.css
@@ -3,7 +3,8 @@
  justify-content: space-between;
  width: 85%;
  margin: auto;
- margin-top: .2%
+ margin-top: .2%;
+ font-size: 90%
 }
 
 #profile-first {
